# Proiect-APD

./: .gitignore  README.md  measurements.py  pyproject.toml
inputs/: bacteria10.txt  bacteria15.txt
src/: main.c
src/life/: life.c  life.h
